--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,19 +1,18 @@
 @import url("https://unpkg.com/@tailwindcss/typography@0.2.x/dist/typography.min.css");
 @import url("https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css");
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;600&display=swap");
 
-
-.cursive{
+.cursive {
   font-family: "Raleway;", cursive;
-  font-weight: 700;
+  font-weight: 200;
 }
 
-.prose img{
+.prose img {
   margin-left: auto;
   margin-right: auto;
   border-radius: 5px;
 }
 
-.home-name{
-  font-size: 150px;
+.home-name {
+  font-size: 100px;
 }
